--- a/src/assets/scss/main_scss.scss
+++ b/src/assets/scss/main_scss.scss
@@ -30,7 +30,12 @@ $base-size: 16;
     html,body
     {
         width:100%;
-        height:100%}
+        height:100%;
+        
+    }
+    body {
+        overflow-x: hidden;
+    }
     ul,ol{
         list-style:none
     }
